--- a/manifest-agent-head.tmpl
+++ b/manifest-agent-head.tmpl
@@ -28,3 +28,8 @@ manifests:
       architecture: amd64
       os: windows
       version: ltsc2022
+  -
+    image: rancher/rancher-agent:{{#if build.tag}}{{build.tag}}{{else}}{{replace "release/" "" build.branch }}-{{build.commit}}{{/if}}-linux-s390x
+    platform:
+      architecture: s390x
+      os: linux
